<resources>

    <string name="app_name">SpendLens</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_slcore">SLCoreActivity</string>
    <string name="enter_expense">Enter Expense</string>
    <string name="set_budget_label">Daily Budget</string>
    <string name="add_funds_label">Add Funds</string>
    <string name="add_funds_field">Enter bonus value</string>
    <string name="button_add_expense">Spend!</string>
    <string name="set_budget_field_text">Enter budget value</string>
    <string name="daily_remaining">Remaining:</string>
	<string name="daily_budget">Budget:</string>
	<string name="daily_spent">Spent:</string>
	<string name="allow_location_label">Store location of purchases:</string>
	
	<string name='G1'>Food</string>
	<string name='G2'>Clothing</string>
	<string name='G3'>Bills</string>
	<string name='G4'>Transit</string>
	<string name='G5'>Debts</string>
	<string name='G6'>Luxuries</string>
</resources>