<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:paddingTop="60dp" >
	
    <LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
		<EditText android:id="@+id/expense_field"
	        android:layout_weight="1"
       		android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal"
	        android:hint="@string/enter_expense" /> 
	    <Button android:id="@+id/expense_button"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:text="@string/button_add_expense"/>
	</LinearLayout>
	   
		
	 <ListView android:layout_width="fill_parent"
	     android:layout_height="0dp"
	     android:layout_weight="1"
	     android:id="@+id/today_list">
	    
	 </ListView>
	 <LinearLayout android:layout_height="wrap_content"
	     android:baselineAligned="false"
	     android:layout_width="fill_parent"
	     android:orientation="horizontal">
	    <LinearLayout android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:orientation="horizontal">
	     	<TextView android:layout_height="wrap_content"
		         android:layout_width="wrap_content"
		         android:text="@string/daily_spent"/>
		    <TextView android:layout_height="wrap_content"
		         android:layout_width="wrap_content"
		         android:id="@+id/daily_spent_val"
		         android:text="0"/>   
	    </LinearLayout>
	    <LinearLayout android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:orientation="horizontal">
	     	<TextView android:layout_height="wrap_content"
		         android:layout_width="wrap_content"
		         android:text="@string/daily_remaining"/>
		    <TextView android:layout_height="wrap_content"
		         android:layout_width="wrap_content"
		         android:id="@+id/daily_remain_val"/>   
	    </LinearLayout>
	    <LinearLayout android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:orientation="horizontal">
	     	<TextView android:layout_height="wrap_content"
		         android:layout_width="wrap_content"
		         android:text="@string/daily_budget"/>
		    <TextView android:layout_height="wrap_content"
		         android:layout_width="wrap_content"
		         android:id="@+id/home_budget"/>   
	    </LinearLayout>
	 </LinearLayout>
</LinearLayout>